# boot

./: CMakeLists.txt  openocd.cfg
ports/satellit-a/: CMakeLists.txt  STM32F407IGTx_FLASH.ld  openocd.cfg
ports/satellit-a/cube/: .cproject  .mxproject  Makefile  STM32F407IGTx_FLASH.ld  cube.ioc
ports/satellit-a/cube/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
ports/satellit-a/cube/Core/Src/: gpio.c  main.c  sdio.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
ports/satellit-a/src/: button.c  diskio.c  port.c  port.h  system.c
ports/satellit-a10/: CMakeLists.txt  STM32U575ZITXQ_FLASH.ld  openocd.cfg
ports/satellit-a10/cube/: .cproject  .mxproject  .project  STM32U575ZITXQ_FLASH.ld  STM32U575ZITXQ_RAM.ld  cube.ioc
ports/satellit-a10/cube/Core/Inc/: adc.h  dcache.h  main.h  stm32u5xx_hal_conf.h  stm32u5xx_it.h  usart.h
ports/satellit-a10/cube/Core/Src/: adc.c  dcache.c  gpdma.c  gpio.c  i2c.c  icache.c  main.c  rtc.c  sdmmc.c  spi.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c  usart.c  usb_otg.c
ports/satellit-a10/cube/Core/Startup/: startup_stm32u575zitxq.s
ports/satellit-a10/cube/Drivers/CMSIS/Device/ST/STM32U5xx/: LICENSE.md
ports/satellit-a10/cube/Drivers/STM32U5xx_HAL_Driver/Inc/: stm32u5xx_hal_flash.h
ports/satellit-a10/src/: button.c  diskio.c  system.c
src/: app.c  app.h  atomic.h  crc_posix.c  crc_posix.h  diskio.c  eth.c  eth.h  ffconf.h  lwipopts.h  main.c  port.h
src/fatfs/: diskio.h
src/lwip/: lwip.cmake
